--- a/android/src/main/res/layout/item_detail_view.xml
+++ b/android/src/main/res/layout/item_detail_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<clean.news.ui.main.MainView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
+		android:orientation="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical"
 		>
 
 	<android.support.design.widget.AppBarLayout
@@ -21,18 +21,13 @@
 				app:title="@string/app_name"
 				/>
 
-		<android.support.design.widget.TabLayout
-				android:id="@+id/tab_layout"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				/>
-
 	</android.support.design.widget.AppBarLayout>
 
-	<android.support.v4.view.ViewPager
-			android:id="@+id/item_list_view_pager"
+	<TextView
 			android:layout_width="match_parent"
 			android:layout_height="match_parent"
+			android:gravity="center"
+			android:text="Item Detail View"
 			/>
 
-</clean.news.ui.main.MainView>
+</LinearLayout>
