--- a/android/src/main/res/layout/item_detail_view.xml
+++ b/android/src/main/res/layout/item_detail_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
-		android:orientation="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:orientation="vertical"
 		>
 
 	<android.support.design.widget.AppBarLayout
@@ -16,12 +16,19 @@
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				app:layout_scrollFlags="scroll|enterAlways"
 				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 				app:title="@string/app_name"
 				/>
 
 	</android.support.design.widget.AppBarLayout>
+
+	<clean.news.ui.item.detail.ItemDetailView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			app:layout_behavior="@string/appbar_scrolling_view_behavior"
+			/>
 
 	<TextView
 			android:layout_width="match_parent"
@@ -30,4 +37,4 @@
 			android:text="Item Detail View"
 			/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
