--- a/android/src/main/res/layout/item_detail_view.xml
+++ b/android/src/main/res/layout/item_detail_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<clean.news.ui.item.detail.ItemDetailView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical"
 		>
 
 	<android.support.design.widget.AppBarLayout
@@ -16,25 +15,21 @@
 				android:id="@+id/toolbar"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				app:layout_scrollFlags="scroll|enterAlways"
 				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-				app:title="@string/app_name"
-				/>
+				>
+
+			<TextView
+					android:id="@+id/title_text_view"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginBottom="12dp"
+					android:layout_marginTop="12dp"
+					style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+					/>
+
+		</android.support.v7.widget.Toolbar>
 
 	</android.support.design.widget.AppBarLayout>
 
-	<clean.news.ui.item.detail.ItemDetailView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			app:layout_behavior="@string/appbar_scrolling_view_behavior"
-			/>
-
-	<TextView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:gravity="center"
-			android:text="Item Detail View"
-			/>
-
-</android.support.design.widget.CoordinatorLayout>
+</clean.news.ui.item.detail.ItemDetailView>
