--- a/android/src/main/res/layout/item_url_view.xml
+++ b/android/src/main/res/layout/item_url_view.xml
@@ -3,7 +3,6 @@
 		xmlns:app="http://schemas.android.com/apk/res-auto"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical"
 		>
 
 	<android.support.design.widget.AppBarLayout
@@ -18,7 +17,17 @@
 				android:layout_height="wrap_content"
 				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
 				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-				/>
+				>
+
+			<TextView
+					android:id="@+id/title_text_view"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:lines="1"
+					style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
+					/>
+
+		</android.support.v7.widget.Toolbar>
 
 	</android.support.design.widget.AppBarLayout>
 
