--- a/android/src/main/res/layout/item_view.xml
+++ b/android/src/main/res/layout/item_view.xml
@@ -32,8 +32,8 @@
 			/>
 
 	<TextView
-			android:id="@+id/author_text_view"
-			android:layout_width="match_parent"
+			android:id="@+id/byline_text_view"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_alignLeft="@+id/title_text_view"
 			android:layout_alignStart="@+id/title_text_view"
@@ -41,7 +41,7 @@
 			android:layout_marginBottom="16dp"
 			android:layout_toLeftOf="@+id/details_button"
 			android:layout_toStartOf="@+id/details_button"
-			tools:text="author"
+			tools:text="100 points by author 5 minutes ago"
 			style="@style/TextAppearance.AppCompat.Caption"
 			/>
 
