--- a/android/src/main/res/layout/main_view.xml
+++ b/android/src/main/res/layout/main_view.xml
@@ -25,6 +25,7 @@
 				android:id="@+id/tab_layout"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
+				app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 				/>
 
 	</android.support.design.widget.AppBarLayout>
