--- a/android/src/main/res/layout/item_url_view.xml
+++ b/android/src/main/res/layout/item_url_view.xml
@@ -43,7 +43,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/app_bar"
-			style="?android:attr/progressBarStyleHorizontal"
+			style="@style/Widget.AppCompat.ProgressBar.Horizontal.WebView"
 			/>
 
 </clean.news.ui.item.url.ItemUrlView>
