--- a/android/src/main/res/layout/item_detail_view.xml
+++ b/android/src/main/res/layout/item_detail_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <clean.news.ui.item.detail.ItemDetailView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:app="http://schemas.android.com/apk/res-auto"
+		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		>
@@ -31,5 +32,17 @@
 		</android.support.v7.widget.Toolbar>
 
 	</android.support.design.widget.AppBarLayout>
+
+	<TextView
+			android:id="@+id/byline_text_view"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_below="@+id/app_bar"
+			android:layout_margin="16dp"
+			android:layout_toLeftOf="@+id/details_button"
+			android:layout_toStartOf="@+id/details_button"
+			tools:text="100 points by author 5 minutes ago"
+			style="@style/TextAppearance.AppCompat.Caption"
+			/>
 
 </clean.news.ui.item.detail.ItemDetailView>
