--- a/android/src/main/res/layout/item_url_view.xml
+++ b/android/src/main/res/layout/item_url_view.xml
@@ -23,6 +23,7 @@
 					android:id="@+id/title_text_view"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
+					android:ellipsize="end"
 					android:lines="1"
 					style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
 					/>
