--- a/android/src/main/res/values/strings_item_url.xml
+++ b/android/src/main/res/values/strings_item_url.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="menu_title_item_details">Comments</string>
+	<string name="menu_title_share">Share</string>
 </resources>
