--- a/android/src/main/res/layout/comment_item_view.xml
+++ b/android/src/main/res/layout/comment_item_view.xml
@@ -2,7 +2,7 @@
 <clean.news.ui.item.list.CommentItemView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_height="wrap_content"
 		android:background="@android:color/white"
 		>
 
@@ -54,9 +54,10 @@
 
 	<View
 			android:id="@+id/collapse_button_bottom_anchor"
-			android:layout_below="@id/byline_text_view"
 			android:layout_width="match_parent"
-			android:layout_height="0dp" />
+			android:layout_height="0dp"
+			android:layout_below="@id/byline_text_view"
+			/>
 
 	<View
 			android:id="@+id/collapse_button"
