--- a/android/src/main/res/layout/comment_item_view.xml
+++ b/android/src/main/res/layout/comment_item_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<clean.news.ui.item.list.CommentItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<clean.news.ui.item.detail.CommentItemView xmlns:android="http://schemas.android.com/apk/res/android"
 		xmlns:tools="http://schemas.android.com/tools"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -80,4 +80,4 @@
 			android:background="#24000000"
 			/>
 
-</clean.news.ui.item.list.CommentItemView>
+</clean.news.ui.item.detail.CommentItemView>
