--- a/android/src/main/res/menu/item_url_view.xml
+++ b/android/src/main/res/menu/item_url_view.xml
@@ -5,5 +5,11 @@
 			android:id="@+id/item_details"
 			android:icon="@drawable/ic_forum_white_24dp"
 			android:title="@string/menu_title_item_details"
-			app:showAsAction="always" />
+			app:showAsAction="always"/>
+
+	<item
+			android:id="@+id/item_share"
+			android:icon="@drawable/ic_share_white_24dp"
+			android:title="@string/menu_title_share"
+			app:showAsAction="always"/>
 </menu>
